# skidsteer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  THECONSTRUCT_SETUP.md  package.xml
config/: agribot_controllers.yaml  controllers.yaml  gazebo_physics.yaml  hardware_params.yaml
firmware/: agribot_firmware.ino  platformio.ini
launch/: agribot_hardware.launch.py  agribot_ros2_control.launch.py  agribot_sim.launch.py  agribot_teleop_test.launch.py  empty_world.launch.py  essential_tests.launch.py  pivot_visual.launch.py  stress_tests.launch.py
scripts/: agribot_physical_controller.py  belly_clearance_test.py  check_ros2_control.sh  essential_safety_check.py  hardware_aware_controller.py  latency_test.py  pivot_stress_test.py  pivot_visual_test.py  serial_bridge_node.py  static_tip_test.py  tip_over_test.py
urdf/: agribot.xacro  ros2_control.xacro
worlds/: agribot_test_bench.world  agriculture_field.world  empty_calibration.world
